fixed spacing issues

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -95,6 +95,7 @@ footer li:last-child {
     background-size: cover;
     z-index: -1;
     position: relative;
+    overflow: hidden;
 }
 
 .intro {
@@ -132,23 +133,6 @@ img.mountains {
 
 .voteOption.right {
     flex-direction: row-reverse;
-}
-
-@media(max-width: 600px) {
-    .voteOption {
-        flex-direction: column;
-    }
-    .voteOption.right {
-        flex-direction: column;
-    }
-
-    .voteOption img {
-        margin-bottom: 50px;
-    }
-
-    img.mountains {
-        max-height: 146px;
-    }
 }
 
 .voteOption.right img {
@@ -192,4 +176,27 @@ img.mountains {
     border: solid 4px;
     font-size: 18px;
     cursor: pointer;
+}
+
+
+@media(max-width: 600px) {
+    .voteOption {
+        flex-direction: column;
+    }
+    .voteOption.right {
+        flex-direction: column;
+    }
+
+    .voteOption img {
+        margin-bottom: 50px;
+    }
+
+    img.mountains {
+        max-height: 146px;
+    }
+
+    .voteOption.right img {
+        margin-left: 50px;
+        margin-right: 50px;
+    }
 }
